fixed a few bugs encountered on mobile platforms

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,8 +116,5 @@ footer {
     width: 80vw;
   }
 
-.card-body {
-  color: black;
-}
 
 }
